# edu-admin-system

./: CMakeLists.txt  README.md  announceManagement.cpp  announceManagement.h  config.txt  graphFunctions.cpp  graphFunctions.h  main.cpp  studentManagement.cpp  studentManagement.h  teacherManagement.cpp  teacherManagement.h  userManagement.cpp  userManagement.h  ustil.h
src/: announceManagement.cpp  announceManagement.h  examManagement.cpp  examManagement.h  graphFunctions.cpp  graphFunctions.h  main.cpp  studentManagement.cpp  studentManagement.h  teacherManagement.cpp  teacherManagement.h  userManagement.cpp  userManagement.h  ustil.h
